--- a/Project Notebook.ipynb
+++ b/Project Notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNqL+vSEZ+7dssRSm4nIf1L"
+      "authorship_tag": "ABX9TyNxiXcRN+CdarA5JeWrCCqZ"
     },
     "kernelspec": {
       "name": "python3",
@@ -68,17 +68,6 @@
       "source": [
         "main_directory = \"/content/rockpaperscissors\"\n",
         "\n",
-        "print(os.listdir(main_directory))"
-      ],
-      "metadata": {
-        "id": "kuiekD_xOA3u"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "splitfolders.ratio('/content/rockpaperscissors/rps-cv-images', \n",
         "                   output=\"/content/data\", \n",
         "                   seed=1337, \n",
@@ -107,11 +96,16 @@
       "cell_type": "code",
       "source": [
         "train_image = 0\n",
+        "valid_image = 0\n",
         "\n",
         "for dir in os.listdir(train_dir):\n",
         "  train_image += len(os.listdir(os.path.join(train_dir, dir)))\n",
         "\n",
-        "print(train_image)"
+        "for dir in os.listdir(valid_dir):\n",
+        "  valid_image += len(os.listdir(os.path.join(valid_dir, dir)))\n",
+        "\n",
+        "print(train_image)\n",
+        "print(valid_image)"
       ],
       "metadata": {
         "id": "RROUrdXIOEla"
@@ -122,24 +116,14 @@
     {
       "cell_type": "code",
       "source": [
-        "valid_image = 0\n",
-        "\n",
-        "for dir in os.listdir(valid_dir):\n",
-        "  valid_image += len(os.listdir(os.path.join(valid_dir, dir)))\n",
-        "\n",
-        "print(valid_image)"
-      ],
-      "metadata": {
-        "id": "nyPrPx5-OGMa"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "train_ds = image_dataset_from_directory(\n",
         "    directory = \"/content/data/train\",\n",
+        "    batch_size = 32,\n",
+        "    label_mode = 'int'\n",
+        ")\n",
+        "\n",
+        "valid_ds = image_dataset_from_directory(\n",
+        "    directory = \"/content/data/val\",\n",
         "    batch_size = 32,\n",
         "    label_mode = 'int'\n",
         ")"
@@ -153,25 +137,11 @@
     {
       "cell_type": "code",
       "source": [
-        "valid_ds = image_dataset_from_directory(\n",
-        "    directory = \"/content/data/val\",\n",
-        "    batch_size = 32,\n",
-        "    label_mode = 'int'\n",
-        ")"
+        "print(train_ds.class_names)\n",
+        "print(valid_ds.class_names)"
       ],
       "metadata": {
         "id": "woIvXqNpOIsu"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(train_ds.class_names)"
-      ],
-      "metadata": {
-        "id": "4m4RH-wpOJ8J"
       },
       "execution_count": null,
       "outputs": []
